<resources>
    <string name="app_name">Coursework</string>
    <string name="enter_message_hint">Reply...</string>
    <string name="channels_menu_title">Channels</string>
    <string name="people_menu_title">People</string>
    <string name="profile_menu_title">Profile</string>
    <string name="user_menu_title">User</string>
    <string name="chat_menu_title">Chat</string>
    <string name="create_stream_menu_title">Create stream</string>
    <string name="search_hint">Search...</string>
    <string name="users_search_hint">Users...</string>
    <string name="stream_name_text">#%s</string>
    <string name="topic_name_text">Topic: #%s</string>
    <string name="subscribed_tab_name">Subscribed</string>
    <string name="all_streams_tab_name">All streams</string>
    <string name="streams_not_found_error_text">Streams not found</string>
    <string name="people_not_found_error_text">People not found</string>
    <string name="user_not_found_error_text">User not found</string>
    <string name="messages_not_found_error_text">Messages not found</string>
    <string name="search_streams_error_text">Search streams error</string>
    <string name="sending_message_error_text">Sending message error</string>
    <string name="deleting_message_error_text">Deleting message error</string>
    <string name="editing_message_error_text">Editing message error</string>
    <string name="uploading_file_error_text">Uploading file error</string>
    <string name="stream_creation_error_text">Stream creation error</string>
    <string name="too_many_requests_error_text">Too many requests, please try again later</string>
    <string name="connection_error_text">Error loading. Check your connection and try again</string>
    <string name="retry_action_snack_bar_text">Retry</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="create_new_channel_text">Create new channel</string>
    <string name="name_text">Name</string>
    <string name="description_text">Description</string>
    <string name="private_text">Private</string>
    <string name="create_text">Create</string>
    <string name="topic_edit_text_hint">Topic</string>
    <string name="add_a_reaction_action_text">Add a reaction</string>
    <string name="delete_message_action_text">Delete message</string>
    <string name="edit_message_action_text">Edit message</string>
    <string name="copy_to_clipboard_action_text">Copy to clipboard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server_url">Zulip server URL</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="use_test_account_text">Test account</string>
    <string name="test_server_url">https://tinkoff-android-spring-2022.zulipchat.com/</string>
   <!-- <string name="test_server_url">https://test-chat-organization.zulipchat.com/</string>-->
    <string name="test_account_login">serashihmin@yandex.ru</string>
    <string name="test_account_password">mAyQnzu2YiCtBHk</string>
    <!--<string name="test_account_password">mAyQnzu2YiCtBHk11</string>-->
</resources>