<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/nav_channels">

    <fragment
        android:id="@+id/nav_channels"
        android:name="ru.tinkoff.android.coursework.presentation.screens.ChannelsFragment"
        android:label="@string/channels_menu_title"
        tools:layout="@layout/fragment_channels">

        <action
            android:id="@+id/action_nav_channels_to_nav_chat"
            app:destination="@id/nav_chat"/>

        <action
            android:id="@+id/action_nav_channels_to_nav_create_stream"
            app:destination="@id/nav_create_stream"/>

    </fragment>

    <fragment
        android:id="@+id/nav_people"
        android:name="ru.tinkoff.android.coursework.presentation.screens.PeopleFragment"
        android:label="@string/people_menu_title"
        tools:layout="@layout/fragment_people">

        <action
            android:id="@+id/action_nav_people_to_nav_user"
            app:destination="@id/nav_user"/>

    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.tinkoff.android.coursework.presentation.screens.ProfileFragment"
        android:label="@string/profile_menu_title"
        tools:layout="@layout/fragment_profile">

    </fragment>

    <activity
        android:id="@+id/nav_chat"
        android:name="ru.tinkoff.android.coursework.presentation.screens.ChatActivity"
        android:label="@string/chat_menu_title"
        tools:layout="@layout/activity_chat">

    </activity>

    <activity
        android:id="@+id/nav_user"
        android:name="ru.tinkoff.android.coursework.presentation.screens.UserActivity"
        android:label="@string/user_menu_title"
        tools:layout="@layout/activity_user">

    </activity>

    <activity
        android:id="@+id/nav_create_stream"
        android:name="ru.tinkoff.android.coursework.presentation.screens.CreateStreamActivity"
        android:label="@string/create_stream_menu_title"
        tools:layout="@layout/activity_create_stream">

    </activity>

</navigation>