<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_700"
    tools:context=".presentation.screens.CreateStreamActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_title_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/create_new_channel_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:padding="20dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:text="@string/create_new_channel_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_back" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/stream_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_100"
        android:backgroundTint="@color/grey_650"
        android:hint="@string/name_text" />

    <EditText
        android:id="@+id/stream_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_100"
        android:backgroundTint="@color/grey_650"
        android:hint="@string/description_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/private_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/private_text"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/whiteVariant"
        app:backgroundTint="@color/teal_500"
        android:enabled="false"
        android:text="@string/create_text" />

</LinearLayout>